# novacomp

./: .gitignore  IMPROVEMENTS.md  README.md  demo_completo.py  demo_novacomp.db  main.py  next.config.ts  novacomp.db  novacomp_memory.db  omni_demo_nav.db  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  triad_alpha_001.db  vercel.json
agents/: executor.py  integration.py
agents/adapters/: ai_sdk_bridge.py
api/: main.py
app/: globals.css  layout.tsx
app/api/chat/: route.ts
app/api/py/chat/: route.ts
app/api/py/evolve/: route.ts
app/api/py/learn/: route.ts
components/: action-buttons.tsx  ai-chat.tsx  chat-interface.tsx  dashboard.tsx  evolution-display.tsx  header.tsx  log-viewer.tsx  process-indicator.tsx  skill-bar.tsx  skills-chart.tsx  status-card.tsx
core/: brain.py  evolution.py  omni_layer_navigator.py  orchestrator.py  polyglot_engine.py  triad_quantum_core.py  universal_comm.py
lib/: api.ts  novacomp-agent.ts  utils.ts
memory/: turboquant.py
novacomp/: .vercelignore  DEPLOYMENT_GUIDE.md  README.md  README_VERCEL.md  VERCEL_FIX.md  main.py  requirements.txt  run.py  vercel.json  vercel_build.sh  vercel_build_fix.sh  wsgi.py
novacomp/analysis/: reverse_engineering.py
novacomp/api/: index.py
novacomp/config/: novacomp.service
novacomp/core/: auto_orchestrator.py  brain.py  governance.py
novacomp/infra/: provisioner.py
novacomp/memory/: novacomp.db  turboquant.py
novacomp/web/: dashboard.py
skills/: calculadora_de_média.py  otimização_estatística.py
web/: dashboard.py  neural_viz.py
(+4 files in other folders)
